Back END , and Front end

--- a/WebAdmin/src/app/reservation/get-reservations/get-reservations.component.css
+++ b/WebAdmin/src/app/reservation/get-reservations/get-reservations.component.css
@@ -1,5 +1,5 @@
 .body2 {
-  background-image: url("../../../assets/barber-shop2.png");
+  background-image: url("../../../assets/background.jpg");
   font-family: 'Open Sans', sans-serif;
   height: 1000px;
 
