--- a/WebAdmin/src/app/services/register-sub-services/register-sub-services.component.html
+++ b/WebAdmin/src/app/services/register-sub-services/register-sub-services.component.html
@@ -9,17 +9,16 @@
       <br>
       <br>
       <div class="ui-fluid">
-        <p-card class="register ui-fluid" header="Create Service" subheader="Services && Products"
+        <p-card class="register ui-fluid" header="Create Products" subheader="Ferri Store"
                 [style]="{width: '360px'}" styleClass="ui-card-shadow ">
           <p-header>
-            <img class="img" align="left" src="../../assets/barber-shop.jpg"/>
+            <img class="img" align="left" src="../../assets/herramientas.jpg"/>
           </p-header>
           <div>
-            Enjoy the convenience of our web service, so you can schedule an appointment for the day and time you want
-            to enjoy our barber and hairdressing services.
+
           </div>
           <p-footer>
-            <a routerLink="/services/getSubServices" style="margin-right: .25em">Go Back to View Services</a>
+            <a routerLink="/services/getSubServices" style="margin-right: .25em">Go Back to View Products</a>
 
           </p-footer>
         </p-card>
@@ -32,7 +31,7 @@
                 (ngSubmit)="onSubmit(userform.value)">
             <p-panel
               class="ng-tns-c4-15 ui-panel-titlebar ui-widget-header ui-helper-clearfix ui-corner-all ng-star-inserted "
-              header="Create Service">
+              header="Create Products">
               <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                 <div class="ui-grid-row">
                   <div class="ui-grid-col-2">
