--- a/WebAdmin/src/app/users/get-users/get-users.component.html
+++ b/WebAdmin/src/app/users/get-users/get-users.component.html
@@ -3,7 +3,7 @@
   <div class="ui-fluid">
     <p-card header="PROFILE DATA" subheader="" [style]="{width: '500px',height:'700px'}" styleClass="ui-card-shadow">
       <p-header>
-        <img src="Card" src="../../assets/check-user.png" class="rounded-circle img-thumbnail" alt="profile">
+        <img src="Card" src="../../assets/descarga.png" class="rounded-circle img-thumbnail" alt="profile">
       </p-header>
       <br><br>
       <div align="center">
