--- a/WebAdmin/src/app/users/updload-user/updload-user.component.html
+++ b/WebAdmin/src/app/users/updload-user/updload-user.component.html
@@ -12,11 +12,10 @@
         <p-card class="register ui-fluid" header="Edit Profile Data" subheader="Change your items!"
                 [style]="{width: '360px'}" styleClass="ui-card-shadow ">
           <p-header>
-            <img class="img" align="left" src="../../assets/barber-shop.jpg"/>
+            <img class="img" align="left" src="../../assets/descarga.png"/>
           </p-header>
           <div>
-            Enjoy the convenience of our web service, so you can schedule an appointment for the day and time you want
-            to enjoy our barber and hairdressing services.
+
           </div>
           <p-footer>
             <a routerLink="/user/profile" (click)="removeID()" style="margin-right: .25em">Go Back to Profile</a>
