--- a/WebAdmin/src/app/salesNotes/register-sales-notes/register-sales-notes.component.html
+++ b/WebAdmin/src/app/salesNotes/register-sales-notes/register-sales-notes.component.html
@@ -10,7 +10,19 @@
       <br>
       <br>
       <div class="ui-fluid">
+        <p-card class="register ui-fluid" header="Make A Sale Note " subheader="Ferri Store"
+                [style]="{width: '360px'}" styleClass="ui-card-shadow ">
+          <p-header>
+            <img class="img" align="left" src="../../assets/carrito.jpg"/>
+          </p-header>
+          <div>
 
+          </div>
+          <p-footer>
+
+
+          </p-footer>
+        </p-card>
       </div>
     </div>
     <div class="ui-fluid">
@@ -92,8 +104,16 @@
                   </div>
                 </div>
                 <br>
-                <button pButton type="submit" label="Añadir Product" (click)="addDetail(detail.products_id,detail.quantityXProducts)"
-                        ></button>
+                <div class="ui-grid-row">
+                  <div class="ui-grid-col-2"></div>
+                  <div class="ui-grid-col-6">
+                    <button pButton type="submit" label="Añadir Product" (click)="addDetail(detail.products_id,detail.quantityXProducts)"
+                    ></button>
+
+                  </div>
+                  <div class="ui-grid-col-4"></div>
+                </div>
+
                 <br>
                 <div class="ui-grid-row">
                   <div class="ui-grid-col-2"></div>
